# segregation-by-design-experiments

./: .gitignore  README.md  RESEARCH_SCHEME_updated.md  pyproject.toml  requirements.txt
polyclinic_access_components/: CITY_LEVEL_IMPLEMENTATION_PLAN.md  CITY_LEVEL_RESEARCH_SCHEME.md  CITY_LEVEL_VERIFICATION_STATUS.md  README.md  RESEARCH_SCHEME.md  ROUTE_SERVICE_JOINT_TASK_TRACKER.md  city_level.py  collect_overnight_city_figures.py  recompute_route_strategy_access_components.py  render_route_strategy_gap_diagnostics.py  run_experiments.py  run_min_route_count_search.py  run_overnight_city_batch.py
polyclinic_access_components/outputs_new17_20260610/: new17_plus_active19europe_street_pattern_pt_services_canvas_summary.csv  new17_street_pattern_pt_services_canvas_summary.csv  polyclinic_component_ok_summary_by_city.csv  polyclinic_component_ok_summary_overall.csv  polyclinic_overall_ok_summary_by_city.csv  polyclinic_overall_ok_summary_overall.csv  polyclinic_requested_summary_by_city.csv  polyclinic_requested_summary_overall.csv  pt_presence_and_usage_by_city.csv  pt_presence_and_usage_detailed_by_city.csv  pt_presence_and_usage_detailed_by_city_no_commutes.csv  pt_transport_presence_vs_pt_success_by_city.csv
polyclinic_access_components/outputs_new5_20260609/: polyclinic_component_ok_summary_by_city.csv  polyclinic_component_ok_summary_overall.csv  polyclinic_home_access_components.parquet  polyclinic_overall_ok_summary_by_city.csv  (+3 more)
service_accessibility_street_pattern/: street_pattern_network_distance_accessibility_notes.md
(+119 files in other folders)
